[gd_scene load_steps=14 format=4 uid="uid://c2o6rp4e1jj0l"]

[ext_resource type="Script" path="res://scripts/Track.gd" id="1_u11ws"]
[ext_resource type="PackedScene" uid="uid://loa31i1g71qi" path="res://scenes/player/Rocket.tscn" id="2_646tc"]
[ext_resource type="Texture2D" uid="uid://biroc2hq4dtsn" path="res://assets/finish_line_square.png" id="4_3ue4q"]
[ext_resource type="PackedScene" uid="uid://dm4j4hg71vece" path="res://scenes/ui/LevelUI.tscn" id="5_7chg1"]
[ext_resource type="Texture2D" uid="uid://ch27prm0r1ehn" path="res://assets/aurange_wall.png" id="5_68n41"]
[ext_resource type="Texture2D" uid="uid://br34rcmd1wiot" path="res://assets/puurple_wall.png" id="5_y75wu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ku8em"]
friction = 0.24
rough = true
bounce = 0.66

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2v73i"]
texture = ExtResource("4_3ue4q")
margins = Vector2i(2, 2)
texture_region_size = Vector2i(30, 30)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bds01"]
texture = ExtResource("5_68n41")
margins = Vector2i(2, 2)
texture_region_size = Vector2i(30, 30)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yxqxu"]
texture = ExtResource("5_y75wu")
margins = Vector2i(2, 2)
texture_region_size = Vector2i(30, 30)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ufiqb"]
tile_size = Vector2i(20, 20)
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_ku8em")
sources/1 = SubResource("TileSetAtlasSource_2v73i")
sources/2 = SubResource("TileSetAtlasSource_bds01")
sources/3 = SubResource("TileSetAtlasSource_yxqxu")

[sub_resource type="Environment" id="Environment_waq8w"]
glow_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4fxh"]
size = Vector2(160, 33)

[node name="AurangeTrack" type="Node2D"]
script = ExtResource("1_u11ws")

[node name="Rocket" parent="." groups=["player"] instance=ExtResource("2_646tc")]
z_index = 1
position = Vector2(-461, -258)

[node name="Camera2D" type="Camera2D" parent="Rocket"]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 3.0
rotation_smoothing_speed = 0.0

[node name="Tiles" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Tiles"]
tile_map_data = PackedByteArray("AADl//D/AgAAAAAAAADl/+//AgAAAAAAAADl/+7/AgAAAAAAAADl/+3/AgAAAAAAAADl/+z/AgAAAAAAAADl/+v/AgAAAAAAAADl/+r/AgAAAAAAAADl/+n/AgAAAAAAAADm/+j/AgAAAAAAAADn/+j/AgAAAAAAAADo/+j/AgAAAAAAAADp/+j/AgAAAAAAAADq/+j/AgAAAAAAAADr/+j/AgAAAAAAAADs/+j/AgAAAAAAAADt/+j/AgAAAAAAAADu/+j/AgAAAAAAAADv/+j/AgAAAAAAAADw/+j/AgAAAAAAAADx/+j/AgAAAAAAAADy/+j/AgAAAAAAAADz/+j/AgAAAAAAAAD0/+j/AgAAAAAAAAD1/+j/AgAAAAAAAAD2/+j/AgAAAAAAAAD3/+j/AgAAAAAAAAD4/+j/AgAAAAAAAADo//n/AgAAAAAAAADp//n/AgAAAAAAAADq//n/AgAAAAAAAADr//n/AgAAAAAAAADs//n/AgAAAAAAAADt//n/AgAAAAAAAADu//n/AgAAAAAAAADv//n/AgAAAAAAAADw//n/AgAAAAAAAADx//n/AgAAAAAAAADy//n/AgAAAAAAAADz//n/AgAAAAAAAAD0//n/AgAAAAAAAAD1//n/AgAAAAAAAAD2//n/AgAAAAAAAAD3//n/AgAAAAAAAAD4//n/AgAAAAAAAAD4//j/AgAAAAAAAAD4//f/AgAAAAAAAAD4//b/AgAAAAAAAAD4//X/AgAAAAAAAAD4//T/AgAAAAAAAAD4//P/AgAAAAAAAAD4//L/AgAAAAAAAAD5//L/AgAAAAAAAAD6//L/AgAAAAAAAAD7//L/AgAAAAAAAAD8//L/AgAAAAAAAAD9//L/AgAAAAAAAAD+//L/AgAAAAAAAAD///L/AgAAAAAAAAAAAPL/AgAAAAAAAAABAPL/AgAAAAAAAAACAPH/AgAAAAAAAAADAPH/AgAAAAAAAAAEAPH/AgAAAAAAAAAFAPH/AgAAAAAAAAAGAPH/AgAAAAAAAAAHAPH/AgAAAAAAAAAIAPH/AgAAAAAAAAAJAPH/AgAAAAAAAAD5/+j/AgAAAAAAAAD6/+j/AgAAAAAAAAD7/+j/AgAAAAAAAAD8/+j/AgAAAAAAAAD9/+j/AgAAAAAAAAD+/+j/AgAAAAAAAAD//+j/AgAAAAAAAAAAAOj/AgAAAAAAAAABAOj/AgAAAAAAAAACAOj/AgAAAAAAAAADAOj/AgAAAAAAAAAEAOj/AgAAAAAAAAAFAOj/AgAAAAAAAAAGAOj/AgAAAAAAAAAHAOj/AgAAAAAAAAAIAOj/AgAAAAAAAAAJAOj/AgAAAAAAAAAKAOj/AgAAAAAAAAALAOj/AgAAAAAAAAAMAOj/AgAAAAAAAAANAOj/AgAAAAAAAAAOAOj/AgAAAAAAAAAPAOj/AgAAAAAAAAAQAOj/AgAAAAAAAAARAOj/AgAAAAAAAAABAPH/AgAAAAAAAAAAAOn/AgAAAAAAAAAAAOr/AgAAAAAAAAAAAOv/AgAAAAAAAAAIAO7/AgAAAAAAAAAIAO//AgAAAAAAAAAIAPD/AgAAAAAAAAAKAPH/AgAAAAAAAAALAPH/AgAAAAAAAAAMAPH/AgAAAAAAAAANAPH/AgAAAAAAAAAOAPH/AgAAAAAAAAAPAPH/AgAAAAAAAAAQAPH/AgAAAAAAAAARAPH/AgAAAAAAAAASAPH/AgAAAAAAAAAQAOn/AgAAAAAAAAAQAOr/AgAAAAAAAAAQAOv/AgAAAAAAAAAQAOz/AgAAAAAAAAATAPH/AgAAAAAAAAAUAPH/AgAAAAAAAAAVAPH/AgAAAAAAAAAWAPH/AgAAAAAAAAAWAPL/AgAAAAAAAAAXAPL/AgAAAAAAAAAXAPP/AgAAAAAAAAAYAPP/AgAAAAAAAAAYAPT/AgAAAAAAAAAZAPT/AgAAAAAAAAAZAPX/AgAAAAAAAAAaAPX/AgAAAAAAAAAaAPb/AgAAAAAAAAAbAPb/AgAAAAAAAAASAOj/AgAAAAAAAAATAOj/AgAAAAAAAAAUAOj/AgAAAAAAAAAVAOj/AgAAAAAAAAAWAOj/AgAAAAAAAAAXAOj/AgAAAAAAAAAXAOn/AgAAAAAAAAAYAOn/AgAAAAAAAAAYAOr/AgAAAAAAAAAZAOr/AgAAAAAAAAAZAOv/AgAAAAAAAAAaAOv/AgAAAAAAAAAaAOz/AgAAAAAAAAAbAOz/AgAAAAAAAAAbAO3/AgAAAAAAAAAcAO3/AgAAAAAAAAAcAO7/AgAAAAAAAAAcAO//AgAAAAAAAAAdAO//AgAAAAAAAAAdAPD/AgAAAAAAAAAeAPD/AgAAAAAAAAAeAPH/AgAAAAAAAAAfAPH/AgAAAAAAAAAfAPL/AgAAAAAAAAAgAPL/AgAAAAAAAAAgAPP/AgAAAAAAAAAhAPP/AgAAAAAAAAAhAPT/AgAAAAAAAAAiAPT/AgAAAAAAAAAbAPf/AgAAAAAAAAAaAPf/AgAAAAAAAAAZAPf/AgAAAAAAAAAYAPf/AgAAAAAAAAAXAPf/AgAAAAAAAAAWAPf/AgAAAAAAAAAVAPf/AgAAAAAAAAAUAPf/AgAAAAAAAAATAPf/AgAAAAAAAAASAPf/AgAAAAAAAAARAPf/AgAAAAAAAAAjAPX/AgAAAAAAAAAjAPb/AgAAAAAAAAAjAPf/AgAAAAAAAAAjAPj/AgAAAAAAAAAjAPn/AgAAAAAAAADl//H/AgAAAAAAAADl//L/AgAAAAAAAADl//P/AgAAAAAAAADl//T/AgAAAAAAAADl//X/AgAAAAAAAADl//b/AgAAAAAAAADl//f/AgAAAAAAAADl//j/AgAAAAAAAADl//n/AgAAAAAAAADm//n/AgAAAAAAAADn//n/AgAAAAAAAADs//P/AgAAAAAAAADs//T/AgAAAAAAAADs//X/AgAAAAAAAADs//b/AgAAAAAAAADs//f/AgAAAAAAAADs//j/AgAAAAAAAADm/+3/AgAAAAAAAADn/+3/AgAAAAAAAADp/+3/AgAAAAAAAADo/+3/AgAAAAAAAADs//L/AgAAAAAAAAAQAPf/AgAAAAAAAAAPAPj/AgAAAAAAAAAOAPn/AgAAAAAAAAANAPr/AgAAAAAAAAAMAPv/AgAAAAAAAAALAPz/AgAAAAAAAAAKAP3/AgAAAAAAAAAJAP7/AgAAAAAAAAAIAP//AgAAAAAAAAAHAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAEAAIAAgAAAAAAAAADAAIAAgAAAAAAAAACAAIAAgAAAAAAAAABAAIAAgAAAAAAAAAAAAIAAgAAAAAAAAD//wIAAgAAAAAAAAD+/wIAAgAAAAAAAAD9/wIAAgAAAAAAAAD8/wIAAgAAAAAAAAD7/wIAAgAAAAAAAAD6/wIAAgAAAAAAAAD5/wIAAgAAAAAAAAD4/wIAAgAAAAAAAAD3/wIAAgAAAAAAAAD2/wIAAgAAAAAAAAD1/wIAAgAAAAAAAAAjAPr/AgAAAAAAAAAiAPX/AgAAAAAAAAAjAPv/AgAAAAAAAAD0/wIAAgAAAAAAAADy/wIAAgAAAAAAAADz/wIAAgAAAAAAAADx/wMAAgAAAAAAAADx/wQAAgAAAAAAAADx/wUAAgAAAAAAAADx/wYAAgAAAAAAAADx/wcAAgAAAAAAAADx/wgAAgAAAAAAAADx/wkAAgAAAAAAAAD3/wcAAgAAAAAAAAD3/wgAAgAAAAAAAAD4/wkAAgAAAAAAAAD5/woAAgAAAAAAAAD6/wsAAgAAAAAAAAD7/wwAAgAAAAAAAAD8/w0AAgAAAAAAAAD9/w4AAgAAAAAAAAD+/w8AAgAAAAAAAADx/woAAgAAAAAAAAD//xAAAgAAAAAAAAAAABEAAgAAAAAAAAABABIAAgAAAAAAAAACABMAAgAAAAAAAAADABQAAgAAAAAAAAADABUAAgAAAAAAAAAEABMAAgAAAAAAAAAFABIAAgAAAAAAAAAGABEAAgAAAAAAAAAXABAAAgAAAAAAAAAXABEAAgAAAAAAAAAXABIAAgAAAAAAAAAYABIAAgAAAAAAAAAYABMAAgAAAAAAAAAgABAAAgAAAAAAAAAgABEAAgAAAAAAAAAgABIAAgAAAAAAAAAfABMAAgAAAAAAAAAHABAAAgAAAAAAAAAIAA8AAgAAAAAAAAAJABAAAgAAAAAAAAALABIAAgAAAAAAAAAKABEAAgAAAAAAAAAMABMAAgAAAAAAAAANABQAAgAAAAAAAAAOABUAAgAAAAAAAAAPABYAAgAAAAAAAAAQABcAAgAAAAAAAAARABgAAgAAAAAAAAASABkAAgAAAAAAAAATABgAAgAAAAAAAAAUABcAAgAAAAAAAAAVABYAAgAAAAAAAAAWABUAAgAAAAAAAAAXABQAAgAAAAAAAAAXAA8AAgAAAAAAAAAXAA4AAgAAAAAAAAAXAA0AAgAAAAAAAAAgAA0AAgAAAAAAAAAgAA4AAgAAAAAAAAAgAA8AAgAAAAAAAAAXAAwAAgAAAAAAAAAYAAwAAgAAAAAAAAAaAAwAAgAAAAAAAAAgAAwAAgAAAAAAAAAfAAwAAgAAAAAAAAAeAAwAAgAAAAAAAAAdAAwAAgAAAAAAAAAcAAwAAgAAAAAAAAAbAAwAAgAAAAAAAAAZAAwAAgAAAAAAAAAfABIAAgAAAAAAAAAUAB8AAgAAAAAAAAAVAB4AAgAAAAAAAAAWAB0AAgAAAAAAAAAXABwAAgAAAAAAAAAYABsAAgAAAAAAAAAZABoAAgAAAAAAAAAaABkAAgAAAAAAAAAbABgAAgAAAAAAAAAcABcAAgAAAAAAAAAdABYAAgAAAAAAAAAeABUAAgAAAAAAAAAfABQAAgAAAAAAAAAYABAAAQAAAAAAAAAZABEAAQAAAAAAAAAaABAAAQAAAAAAAAAbABEAAQAAAAAAAAAcABAAAQAAAAAAAAAdABEAAQAAAAAAAAAeABAAAQAAAAAAAAAfABEAAQAAAAAAAAAIAAcAAgAAAAAAAAD4/wcAAgAAAAAAAAD5/wcAAgAAAAAAAAD6/wcAAgAAAAAAAAD7/wcAAgAAAAAAAAD8/wcAAgAAAAAAAAD9/wcAAgAAAAAAAAD+/wcAAgAAAAAAAAD//wcAAgAAAAAAAAAAAAcAAgAAAAAAAAABAAcAAgAAAAAAAAACAAcAAgAAAAAAAAADAAcAAgAAAAAAAAAEAAcAAgAAAAAAAAAFAAcAAgAAAAAAAAAGAAcAAgAAAAAAAAAHAAcAAgAAAAAAAADx/wsAAgAAAAAAAADx/wwAAgAAAAAAAAANAPv/AgAAAAAAAAALAP3/AgAAAAAAAAAJAP//AgAAAAAAAAAHAAEAAgAAAAAAAAAPAPn/AgAAAAAAAAATAP3/AgAAAAAAAAAUAP3/AgAAAAAAAAAVAP3/AgAAAAAAAAAWAP3/AgAAAAAAAAAXAP3/AgAAAAAAAAAYAP3/AgAAAAAAAAAZAP3/AgAAAAAAAAAaAP3/AgAAAAAAAAAbAP3/AgAAAAAAAAAcAP3/AgAAAAAAAAAdAP3/AgAAAAAAAAAeAP3/AgAAAAAAAAAfAP3/AgAAAAAAAAAgAP3/AgAAAAAAAAAhAP3/AgAAAAAAAAAiAP3/AgAAAAAAAAAjAP3/AgAAAAAAAAAjAPz/AgAAAAAAAAAIABkAAgAAAAAAAAAJABoAAgAAAAAAAAAKABsAAgAAAAAAAAALABwAAgAAAAAAAAAMAB0AAgAAAAAAAAANAB4AAgAAAAAAAAAOAB8AAgAAAAAAAAAPACAAAgAAAAAAAAAQACEAAgAAAAAAAAARACIAAgAAAAAAAAASACEAAgAAAAAAAAATACAAAgAAAAAAAADx/w0AAgAAAAAAAADx/w4AAgAAAAAAAADy/w8AAgAAAAAAAADz/xAAAgAAAAAAAAD0/xEAAgAAAAAAAAD1/xIAAgAAAAAAAAD2/xMAAgAAAAAAAAD3/xQAAgAAAAAAAAD4/xUAAgAAAAAAAAD5/xYAAgAAAAAAAAD6/xcAAgAAAAAAAAD7/xgAAgAAAAAAAAD8/xkAAgAAAAAAAAD9/xoAAgAAAAAAAAD+/xsAAgAAAAAAAAD//xwAAgAAAAAAAAAAAB0AAgAAAAAAAAABAB4AAgAAAAAAAAD1/xAAAgAAAAAAAAD+/xEAAgAAAAAAAAD9/xIAAgAAAAAAAAD2/w8AAgAAAAAAAAASAP7/AgAAAAAAAAARAP//AgAAAAAAAAAQAAAAAgAAAAAAAAAPAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAANAAMAAgAAAAAAAAAMAAQAAgAAAAAAAAALAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAJAAcAAgAAAAAAAAACAB8AAgAAAAAAAAADAB4AAgAAAAAAAAAEAB0AAgAAAAAAAAAFABwAAgAAAAAAAAAGABsAAgAAAAAAAAAHABoAAgAAAAAAAADq/+3/AgAAAAAAAADl/+j/AgAAAAAAAAA=")
tile_set = SubResource("TileSet_ufiqb")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_waq8w")

[node name="LevelUI" parent="." instance=ExtResource("5_7chg1")]

[node name="RestartButton" parent="LevelUI/LevelUIWrapper/RestartButtonContainer" index="0"]
action = "reset_track"

[node name="FinishLine" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishLine"]
position = Vector2(561, 335.5)
shape = SubResource("RectangleShape2D_g4fxh")

[editable path="LevelUI"]
